--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "hbs": "^4.2.0",
     "mysql": "^2.18.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -46,7 +48,9 @@
   "devDependencies": {
     "@nestjs/testing": "^8.4.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/hbs": "^4.0.1",
     "@types/jest": "^27.4.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
